Fixed example text on Menu Items. Fixed misalignment of the Left Icon on Chrome and Firefox

--- a/src/components/DropdownMenu/DropdownMenu.scss
+++ b/src/components/DropdownMenu/DropdownMenu.scss
@@ -105,6 +105,7 @@
 
 .item {
     @include font-style($family: standard);
+    align-items: center;
     text-align: left;
     background: none;
     border: none;
